5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1760_672.log
== SUBMITION (2019-05-22 18:29:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = ones(6 , dtype=int)
print (v)
-- EXECUTION TIME:
0.544593
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:29:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = ones(6 , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:38:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- EXECUTION TIME:
0.588187
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:38:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:38:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- EXECUTION TIME:
0.606835
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = array(int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- ERROR:
File "XXXX", line 4
    v = ones(6 , dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v1 = ones(6 , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:40:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v = ones(6 , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:40:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v1 = ones(6 , dtype=int)
print (v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:40:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = int(input("escreva um numero: "))
v1 = ones(6 , dtype=int)
print (v1)
-- EXECUTION TIME:
0.477862
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:41:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
a = int(input("escreva um numero: "))
v = ones(a , dtype=int)
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:41:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
a = int(input("escreva um numero: "))
v = ones(a , dtype=int)
print (v)
-- EXECUTION TIME:
0.576163
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
